zoom working, looking for scrollbar fix

--- a/Automata.UI/src/app/fsm/fsm-draw/components/fsm-draw/fsm-draw.component.css
+++ b/Automata.UI/src/app/fsm/fsm-draw/components/fsm-draw/fsm-draw.component.css
@@ -1,7 +1,3 @@
-.draw-container{
-    width:2000px;
-    height:2000px;
-}
 
 .scroll-container{
     width:100%;
